--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,22 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-M5SFSD7');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <script src="https://checkout.sandbox.dev.clover.com/sdk.js"></script>
     <!-- <script src="https://checkout.clover.com/sdk.js"></script> -->
 
@@ -30,6 +46,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-M5SFSD7"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <script>
       // window.clover = new Clover('220b6a7a22aea9759ff4d5e66982bf1b'); //prod
       window.clover = new Clover('631ee26a5ffe5e916b8235b898fae8cf'); //sand
